fixing up css a bit and wording

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="panel-heading">
         <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#grammar-accordian" href="#basics">
-                Basics
+                Basic Grammar
             </a>
         </h4>
     </div>
@@ -178,25 +178,24 @@
                 <li><a href="#">아/어/여서,(으)니까 (because,so)</a></li>
                 <li><a href="#">(으)며,(으)면서 (while, at the same time)</a></li>
                 <li><a href="#">밖에 (except for)</a></li>
-                <li><a href="#">(으)ㄴ 후에/뒤에/다음에 (after doing)</a></li>
+                <li><a href="#">(ㄴ/은) 후에/뒤에/다음에 (after doing)</a></li>
                 <li><a href="#">아/어/여도 (even though)</a></li>
-                <li><a href="#">(으)ㄴ/는데 (explanation,result)</a></li>
+                <li><a href="#">(ㄴ/은)/는데 (explanation,result)</a></li>
                 <li><a href="#">자마자,기가 무셥게,기가 바쁘게 (as soon as)</a></li>
                 <li><a href="#">을수록 (the more something is)</a></li>
                 <li><a href="#">다가 (transition between action)</a></li>
-                <li><a href="#">(으)ㄴ/는지 (whether or not)</a></li>
-                <li><a href="#">(으)ㄴ/는 김에 (while you are doing)</a></li>
-                <li><a href="#">(으)ㄹ 겸 (slash,and)</a></li>
-                <li><a href="#">(으)ㄹ 때 (at the time)</a></li>
+                <li><a href="#">(ㄴ/은)/는지 (whether or not)</a></li>
+                <li><a href="#">(ㄴ/은)/는 김에 (while you are doing)</a></li>
+                <li><a href="#">(ㄹ/을) 겸 (slash,and)</a></li>
+                <li><a href="#">(ㄹ/을) 때 (at the time)</a></li>
                 <li><a href="#">아/어/여 봤자,(으)나마나 (even if)</a></li>
                 <li><a href="#">느라고 (showing negative result)</a></li>
                 <li><a href="#">(ㄹ/을) 테니까 (assumption)</a></li>
                 <li><a href="#">고 나서 (after doing)</a></li>
-                <li><a href="#">기로 하다 (to decide to)</a></li>
-                <li><a href="#">(으/느)ㄴ 이상 (since)</a></li>
+                <li><a href="#">(은/는) 이상 (since)</a></li>
                 <li><a href="#">아무리 아/어/여도 (no matter what)</a></li>
-                <li><a href="#">(으/느)ㄴ 데다가 (in addition to)</a></li>
-                <li><a href="#">(느)ㄴ 한,기만 하면,지만 않으면 (as long as)</a></li>
+                <li><a href="#">(은/는) 데다가 (in addition to)</a></li>
+                <li><a href="#">(ㄴ/는) 한,기만 하면,지만 않으면 (as long as)</a></li>
                 <li><a href="#">도록 (so that,in order to)</a></li>
                 <li><a href="#">던 (used to do something)</a></li>
                 <li><a href="#">는데도 불구하고 (despite,although)</a></li>
@@ -209,56 +208,72 @@
     <div class="panel-heading">
         <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#grammar-accordian" href="#copula">
-                Endings/Interrogative/Imperative
+                Basic Expressions
             </a>
         </h4>
     </div>
     <div id="copula" class="panel-collapse collapse">
         <div class="panel-body">
             <ul class="nav">
-                <li><a href="#">주세요/줘 (requesting)</a></li>
+                <li><a href="#">주세요/줘 (request)</a></li>
                 <li><a href="#">고 싶다 (to want)</a></li>
                 <li><a href="#">ㄹ 수 있다 (can do)</a></li>
                 <li><a href="#">ㄹ 수도 있다 (might do)</a></li>
-                <li><a href="#">을/를 잘/못 하다 (to be good/bad at)</a></li>
                 <li><a href="#">(아/어/여 야)되다/하다 (must,should)</a></li>
+                <li><a href="#">(ㄴ/은)/는/(ㄹ/을) 것 같다 (think,opinion)</a></li>
+                <li><a href="#">아/어/여 보다 (to try)</a></li>
+                <li><a href="#">는 중이다 (in the middle of)</a></li>
                 <li><a href="#">마세요,말고 (stop doing)</a></li>
                 <li><a href="#">ㄹ게요 (promise to do)</a></li>
                 <li><a href="#">ㄹ래요?,자 (let's do)</a></li>
                 <li><a href="#">ㄹ래요,러/려고 하다 (intention to do)</a></li>
                 <li><a href="#">(으)ㄹ까요? (wonder,suggestion)</a></li>
-                <li><a href="#">(으)ㄴ/는/(으)ㄹ 것 같다 (think))</a></li>
                 <li><a href="#">잖아요 (c'mon, you know)</a></li>
                 <li><a href="#">네요 (emotion,surprise)</a></li>
-                <li><a href="#">(으)ㄴ/는데 (detail,shock)</a></li>
-                <li><a href="#">(으)ㄹ 리가 없어요 (impossible, can't be)</a></li>
+                <li><a href="#">(ㄴ/은)/는데 (detail,shock)</a></li>
                 <li><a href="#">지,죠 (confirmation)</a></li>
                 <li><a href="#">겠 (intention,assumption,opinion)</a></li>
-                <li><a href="#">아/어/여도 되다 (ok to do)</a></li>
-                <li><a href="#">(으)면 안 되다 (should not)</a></li>
-                <li><a href="#">아/어/여 보다 (to try)</a></li>
-                <li><a href="#">아/어/여 지다 (to become,to improve)</a></li>
-                <li><a href="#">게 되다 (end up doing)</a></li>
-                <li><a href="#">(으)ㄹ 뻔 했다 (almost did)</a></li>
-                <li><a href="#">나 보다 (guess,suppose,assume)</a></li>
-                <li><a href="#">(으)려나 보다 (assumption about future)</a></li>
-                <li><a href="#">ㄴ/은/는 편이다 (rather,quite)</a></li>
-                <li><a href="#">(으)ㄹ 수 밖에 없다 (no choice,can only)</a></li>
-                <li><a href="#">는 중이다 (in the middle of)</a></li>
                 <li><a href="#">거든요 (explanation,since)</a></li>
                 <li><a href="#">는 구나/군요 (realization)</a></li>
                 <li><a href="#">더라,던데요 (experienced)</a></li>
-                <li><a href="#">(으)ㄴ/ㄹ 줄 알다/모르다 (to know or not know)</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#advanced">
+                Advanced Expressions
+            </a>
+        </h4>
+    </div>
+    <div id="advanced" class="panel-collapse collapse">
+        <div class="panel-body">
+            <ul class="nav">
+                <li><a href="#">을/를 잘/못 하다 (to be good/bad at)</a></li>
+                <li><a href="#">(ㄹ/을) 리가 없어요 (impossible, can't be)</a></li>
+                <li><a href="#">아/어/여도 되다 (ok to do)</a></li>
+                <li><a href="#">(으)면 안 되다 (should not)</a></li>
+                <li><a href="#">아/어/여 지다 (to become,to improve)</a></li>
+                <li><a href="#">게 되다 (end up doing)</a></li>
+                <li><a href="#">(ㄹ/을) 뻔 했다 (almost did)</a></li>
+                <li><a href="#">나 보다 (guess,suppose,assume)</a></li>
+                <li><a href="#">(으)려나 보다 (assumption about future)</a></li>
+                <li><a href="#">ㄴ/은/는 편이다 (rather,quite)</a></li>
+                <li><a href="#">(ㄹ/을) 수 밖에 없다 (no choice,can only)</a></li>
+                <li><a href="#">(ㄴ/은)/(ㄹ/을) 줄 알다/모르다 (to know or not know)</a></li>
                 <li><a href="#">에 따라 달라요 (it depends on)</a></li>
-                <li><a href="#">(으/느)ㄴ 척/체 하다 (to pretend to)</a></li>
-                <li><a href="#">(으)ㄹ 만하다 (to be worth,deserving)</a></li>
+                <li><a href="#">(은/는) 척/체 하다 (to pretend to)</a></li>
+                <li><a href="#">(을) 만하다 (to be worth,deserving)</a></li>
                 <li><a href="#">게 되어 있다 (to be bound to)</a></li>
                 <li><a href="#">(으)면 좋겠어요 (to hope that)</a></li>
-                <li><a href="#">(으)ㄴ 적 있다/앖다 (to have done,never have done)</a></li>
-                <li><a href="#">(으)ㄹ 따름이다 (we can only)</a></li>
+                <li><a href="#">(ㄴ/은) 적 있다/앖다 (to have done,never have done)</a></li>
+                <li><a href="#">(ㄹ/을) 따름이다 (we can only)</a></li>
                 <li><a href="#">아/어/여 버리다,고 말다 (feelings about completed action)</a></li>
                 <li><a href="#">아/어/여 보이다 (looks like,seems like)</a></li>
                 <li><a href="#">(으)ㄹ까 보다 (concern,reason,inclination)</a></li>
+                <li><a href="#">기로 하다 (to decide to)</a></li>
             </ul>
         </div>
     </div>
@@ -314,22 +329,6 @@
         </div>
     </div>
 </div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#expressions">
-                Misc Expressions
-            </a>
-        </h4>
-    </div>
-    <div id="expressions" class="panel-collapse collapse">
-        <div class="panel-body">
-            <ul class="nav">
-                <li><a href="#">Greeting</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
 </div>
 
 </div>
@@ -345,19 +344,69 @@
     </div>
     <div id="vocabulary" class="panel-collapse collapse">
         <div class="panel-body">
-            <ul class="nav">
-                <li><a href="#">Basic</a></li>
-                <li><a href="#">Numbers</a></li>
-                <li><a href="#">Time,Days,Month,Year</a></li>
-                <li><a href="#">Counting</a></li>
-                <li><a href="#">Emphasis</a></li>
-                <li><a href="#">Frequency</a></li>
-                <li><a href="#">Food</a></li>
-                <li><a href="#">Travel</a></li>
-                <li><a href="#">Furniture</a></li>
-                <li><a href="#">Animals</a></li>
-                <li><a href="#">Hobbies</a></li>
-            </ul>
+            <div class="panel-group" id="vocab-accordian">
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#vocab-accordian" href="#words">
+                                Words
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="words" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <ul class="nav">
+                                <li><a href="#">Basic</a></li>
+                                <li><a href="#">Numbers</a></li>
+                                <li><a href="#">Time,Days,Month,Year</a></li>
+                                <li><a href="#">Counting</a></li>
+                                <li><a href="#">Emphasis</a></li>
+                                <li><a href="#">Frequency</a></li>
+                                <li><a href="#">Food</a></li>
+                                <li><a href="#">Travel</a></li>
+                                <li><a href="#">Furniture</a></li>
+                                <li><a href="#">Animals</a></li>
+                                <li><a href="#">Hobbies</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#vocab-accordian" href="#idioms">
+                                Idioms
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="idioms" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <ul class="nav">
+                                <li><a href="#">Greeting</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#vocab-accordian" href="#expressions">
+                                Situational Expressions
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="expressions" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <ul class="nav">
+                                <li><a href="#">Greeting</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -399,7 +448,8 @@
     <div class="page-header row">
         {{#each entries}}
             <span class="word">
-                <a href="#" class="popover-link" data-id="{{this.dataid}}" data-toggle="popover" title="{{{this.tooltip}}}">
+                <a href="#" class="popover-link" data-id="{{this.dataid}}" data-toggle="popover"
+                   title="{{{this.tooltip}}}">
                     {{this.word}}
                 </a>
             </span>
