changing bootstrap classes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-default" id="header" role="navigation">
     <!-- /.container-fluid -->
 </nav>
-<main id="korean-app" class="container-fluid">
+<main id="korean-app" class="container">
     <div class="row">
         <div id="sidebar"></div>
         <!--/span-->
@@ -442,7 +442,7 @@
     </div>
     {{/if}}
     {{#each entries}}
-    <div class="well">
+    <div class="well-sm">
         <h2>{{this.title}}</h2>
 
         <p class="lead">
