making some revisions with the translations

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 </script>
 <script id="vocab-template" type="text/x-handlebars-template">
     <table class="table table-condensed table-hover">
-        <caption>Vocabulary List</caption>
+        <caption>Vocabulary</caption>
         <thead>
         <tr>
             <td>Word</td>
